# Diffusion_model_microwave

./: .gitignore  README.md  README_ENV.md  environment.yml  environment_sim.yml  launch_all.sh  print_home.py  readme
configs/task/: e_waste_image.yaml  e_waste_image_transformer.yaml  e_waste_image_unet_real.yaml
configs/train/: train_e_waste.yaml  train_e_waste_transformer.yaml  train_e_waste_unet_real.yml
diffusion_policy/: .gitignore  conda_environment_nomujoco.yaml
diffusion_policy/diffusion_policy/config/task/: e_waste_image.yaml
diffusion_policy/diffusion_policy/dataset/: generic_image_dataset.py  test_dataset.py
diffusion_policy/diffusion_policy/model/vision/: multi_image_obs_encoder.py
mujoco/models/: arm2dof.xml  ur5e_scene.xml  ur5e_scene_custom.xml
mujoco/models/pince/OnRobot-RG2FT-ROS/onrobot_rg2ft_description/urdf/: angle_bracket.stl  gripper_body.stl  left_inner_finger.stl  left_inner_knuckle.stl  left_outer_knuckle.stl  onrobot_rg2ft.urdf  onrobot_rg2ft.xacro  onrobot_rg2ft_macro.xacro  quick_changer.stl  rg2ft.xml  right_inner_finger.stl  right_inner_knuckle.stl  right_outer_knuckle.stl
mujoco/models/universal_robots_ur10e/: scene_custom.xml  scene_microwave.xml  scene_microwave_camera.xml  ur10e.xml  ur10e_with_gripper.xml
mujoco/models/universal_robots_ur5e/: ur5e.xml
mujoco/teleop/: compute_initial_robot_pose.py  mujoco_scene_utils.py  teleop_keyboard_cv.py  test_UR10e_touch.py
mujoco/tests/: scene_utils.py  test_UR10e_ik_follower.py  test_UR10e_object_distance.py  test_UR10e_policy_mujoco.py  test_UR5e_free_cam.py  test_UR5e_live_image.py
mujoco/tests/utils/: safety_config.py  scene_utils.py
ros2_WS/src/touch_ros2_driver/: CMakeLists.txt  package.xml
ros2_WS/src/touch_ros2_driver/launch/: launch_orientation.launch.py  touch_rviz.launch.py
ros2_WS/src/touch_ros2_driver/src/: orientation_test.cpp  touch_node.cpp
scripts/: check_zarr.py  follow_diffusion_traj.py  replay_zarr.py  traj_zarr.py
